@@ -64,6 +64,10 @@ for global matching, unpredictable things could happen. For example, in UTF-8
 mode, the pattern //g,zero_terminate read random memory when matched against an 
 empty string with zero_terminate. This was a bug in pcre2test, not the library.
 
+9. Moved some Windows-specific code in pcre2grep (introduced in 10.23/13) out
+of the section that is compiled when Unix-style directory scanning is
+available, and into a new section that is always compiled for Windows.
+
 
 Version 10.23 14-February-2017
 ------------------------------
